03-testing/ew-test/hello-breaker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-breaker
  namespace: c1
spec:
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 5000
  selector:
    app: hello
  type: ClusterIP
