03-testing/ew-test/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: ingressgateway
  name: ingressgateway
  namespace: d8-istio
spec:
  selector:
    app: ingressgateway
  servers:
  - hosts:
    - '*.ice.local'
    port:
      name: tls
      number: 15443
      protocol: TLS
    tls:
      mode: AUTO_PASSTHROUGH
